--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -10,6 +10,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    env:
+      dir_portal: ./src/RecebaFacil.Portal
+      dir_tests: ./src/RecebaFacil.Tests
 
     steps:
     - uses: actions/checkout@v2
@@ -17,9 +20,9 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.101
-    - name: Install dependencies
-      run: dotnet restore
     - name: Build
-      run: dotnet build src/RecebaFacil.Portal/RecebaFacil.Portal.csproj --configuration Release --no-restore
+      run: dotnet build RecebaFacil.Portal.csproj --configuration Release
+      working-directory: ${{env.dir_portal}}
     - name: Test
-      run: dotnet test src/RecebaFacil.Tests/RecebaFacil.Tests.csproj--no-restore --verbosity normal
+      run: dotnet test RecebaFacil.Tests.csproj --verbosity normal
+      working-directory: ${{env.dir_tests}}
