--- a/src/RecebaFacil.Infrastructure/RecebaFacil.Infrastructure.csproj
+++ b/src/RecebaFacil.Infrastructure/RecebaFacil.Infrastructure.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="DataAccess\Core\DapperColumnMap.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.35" />
+    <PackageReference Include="Dapper.FluentMap" Version="1.8.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.3" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
