--- a/src/RecebaFacil.Service/RecebaFacil.Service.csproj
+++ b/src/RecebaFacil.Service/RecebaFacil.Service.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\RecebaFacil.Domain\RecebaFacil.Domain.csproj" />
   </ItemGroup>
 
