--- a/src/RecebaFacil.Tests/RecebaFacil.Tests.csproj
+++ b/src/RecebaFacil.Tests/RecebaFacil.Tests.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\RecebaFacil.IoC\RecebaFacil.IoC.csproj" />
+    <ProjectReference Include="..\RecebaFacil.Service\RecebaFacil.Service.csproj" />
   </ItemGroup>
 
 </Project>
