--- a/src/RecebaFacil.Portal/RecebaFacil.Portal.csproj
+++ b/src/RecebaFacil.Portal/RecebaFacil.Portal.csproj
@@ -6,7 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\HeaderViewModel.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Remove="Views\Home\Index.cshtml" />
+    <Content Remove="Views\Shared\_Header.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
