--- a/src/RecebaFacil.Portal/RecebaFacil.Portal.csproj
+++ b/src/RecebaFacil.Portal/RecebaFacil.Portal.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\RecebaFacil.IoC\RecebaFacil.IoC.csproj" />
+    <ProjectReference Include="..\RecebaFacil.CrossCutting\RecebaFacil.CrossCutting.csproj" />
   </ItemGroup>
 
 
