--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -1,8 +1,6 @@
 name: .NET Core
 
 on:
-  push:
-    branches: [ master, develop ]
   pull_request:
     branches: [ master ]
 
@@ -24,5 +22,5 @@ jobs:
       run: dotnet build RecebaFacil.Portal.csproj --configuration Release
       working-directory: ${{env.dir_portal}}
     - name: Test
-      run: dotnet test RecebaFacil.Tests.csproj --verbosity normal
+      run: dotnet test RecebaFacil.Tests.csproj --no-build --verbosity normal
       working-directory: ${{env.dir_tests}}
