--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -22,5 +22,5 @@ jobs:
       run: dotnet build RecebaFacil.Portal.csproj --configuration Release
       working-directory: ${{env.dir_portal}}
     - name: Test
-      run: dotnet test RecebaFacil.Tests.csproj --verbosity quiet
+      run: dotnet test RecebaFacil.Tests.csproj --verbosity minimal
       working-directory: ${{env.dir_tests}}
