Configure author's e-mail into Swagger

--- a/src/RecebaFacil.PontoVendaApi/appsettings.json
+++ b/src/RecebaFacil.PontoVendaApi/appsettings.json
@@ -15,6 +15,7 @@
     "Title": "Parceria Receba Facil",
     "Description": "API de integracao para lojas virtuais",
     "ContactName": "Gabriel Malta",
-    "ContactUrl": "https://br.linkedin.com/in/gsmalta/"
+    "ContactUrl": "https://br.linkedin.com/in/gsmalta/",
+    "ContactEmail": "gabriels.malta@outlook.com"
   }
 }
