--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       # Run dotnet build and publish
       - name: dotnet build and publish
         run: |
-          dotnet restore
+          dotnet restore RecebaFacil.Portal.csproj
           dotnet build RecebaFacil.Portal.csproj --configuration Release          
           dotnet publish RecebaFacil.Portal.csproj -c Release -o '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/Portal' 
         working-directory: ${{env.DIR_PORTAL}}
