--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   AZURE_WEBAPP_NAME: nonprod-recebafacil
-  AZURE_WEBAPP_PACKAGE_PATH: '.'
+  AZURE_WEBAPP_PACKAGE_PATH: './src/RecebaFacil.Portal'
   DOTNET_VERSION: '3.1.101'
   DIR_PORTAL: ./src/RecebaFacil.Portal
   DIR_TEST: ./src/RecebaFacil.Tests
