--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   AZURE_WEBAPP_NAME: nonprod-recebafacil
-  AZURE_WEBAPP_PACKAGE_PATH: './src/RecebaFacil.Portal'
+  AZURE_WEBAPP_PACKAGE_PATH: '.'
   DOTNET_VERSION: '3.1.101'
   DIR_PORTAL: ./src/RecebaFacil.Portal
   DIR_TEST: ./src/RecebaFacil.Tests
@@ -31,7 +31,7 @@ jobs:
         run: |
           dotnet restore RecebaFacil.Portal.csproj
           dotnet build RecebaFacil.Portal.csproj --configuration Release          
-          dotnet publish RecebaFacil.Portal.csproj -c Release -o '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/Portal' 
+          dotnet publish RecebaFacil.Portal.csproj -c Release -o '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}' 
         working-directory: ${{ env.DIR_PORTAL }}
       
       # Run Visual Studio Tests
@@ -45,4 +45,4 @@ jobs:
         with: 
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE  }}
-          package: '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/Portal'
+          package: '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}'
