--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,9 +39,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         shell: powershell
         run: |
-          .\.sonar\scanner\dotnet-sonarscanner begin /k:"gabriels-malta_portal-receba-facil" /o:"gabriels-malta" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"          
-      - name: Build
-        run: dotnet build .\src\RecebaFacil.Portal\RecebaFacil.Portal.csproj --configuration Release
-      - name: Test
-        run: dotnet test .\src\RecebaFacil.Tests\RecebaFacil.Tests.csproj --verbosity minimal
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"gabriels-malta_portal-receba-facil" /o:"gabriels-malta" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"                
+          dotnet build .\src\RecebaFacil.Portal\RecebaFacil.Portal.csproj --configuration Release
+          dotnet test .\src\RecebaFacil.Tests\RecebaFacil.Tests.csproj --verbosity minimal
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
