--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,6 @@ jobs:
         shell: powershell
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"gabriels-malta_portal-receba-facil" /o:"gabriels-malta" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"                
-          dotnet build .\src\RecebaFacil.Portal\RecebaFacil.Portal.csproj --configuration Release
+          dotnet build .\src\RecebaFacil.Portal\RecebaFacil.sln --configuration Release
           dotnet test .\src\RecebaFacil.Tests\RecebaFacil.Tests.csproj --verbosity minimal
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
