--- a/src/RecebaFacil.Portal/RecebaFacil.Portal.csproj
+++ b/src/RecebaFacil.Portal/RecebaFacil.Portal.csproj
@@ -1,9 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <ApplicationIcon>wwwroot\favicon.ico</ApplicationIcon>
-    <CodeAnalysisRuleSet>..\.sonarlint\sonar.portal.recebafacilcsharp.ruleset</CodeAnalysisRuleSet>
     <ProjectGuid>{481CBF66-F597-46A0-A981-0FAA1DD95776}</ProjectGuid>
   </PropertyGroup>
 
@@ -17,11 +16,7 @@
     <Content Remove="Views\Home\base.cshtml" />
     <Content Remove="Views\Shared\_Header.cshtml" />
   </ItemGroup>
-
-  <ItemGroup>
-    <AdditionalFiles Include="..\.sonarlint\sonar.portal.recebafacil\CSharp\SonarLint.xml" Link="SonarLint.xml" />
-  </ItemGroup>
-
+  
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.5">
